Change the runtime dependency from libradiusclient-ng2 to libfreeradius-client2.
This is untested at runtime.

--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,6 @@ Depends: perl,
  vyatta-bash | bash (>= 3.1),
  ppp,
  pppoe,
- libradiusclient-ng2
+ libfreeradius-client2
 Description: PPPoE server configuration/operational commands
  VyOS configuration/operational templates and scripts for PPPoE server
